-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 9
-
Component/s: hotspot
-
b94
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8223526 | openjdk8u222 | Unassigned | P2 | Resolved | Fixed | b02 |
| JDK-8219435 | 8u222 | Fairoz Matte | P2 | Resolved | Fixed | master |
| JDK-8221665 | 8u221 | Fairoz Matte | P2 | Closed | Fixed | b02 |
| JDK-8224287 | emb-8u221 | Fairoz Matte | P2 | Resolved | Fixed | b02 |
There is a method called verifyHeapDump(), but it is never called.
Adding a call to it gives lots of warnings:
hprof> WARNING: Failed to resolve object id 0x6c003d348 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f270 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001ff08 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f410 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001ffd8 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f9c0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fa28 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f0d0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0022218 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0020110 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f1a0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fd68 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f4e0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c00200a8 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f8f0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f958 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f3a8 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fea0 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f2d8 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001ff70 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f208 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f6e8 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f750 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f618 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f680 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f7b8 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f820 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f340 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fe38 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f478 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0020040 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fa90 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c00201e0 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0112980 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c00175d0 for field m_matchingInterface (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0103c10 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c003c268 for field rtype (signature L)
hprof> WARNING: Failed to resolve object id 0x6c002b018 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c010e4d0 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c003c268 for field returnType (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0035bb8 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0035b50 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c003bd00 for field returnType (signature L)
hprof> WARNING: Failed to resolve object id 0x6c00533f8 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0053318 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0053680 for field type (signature L)
A first investigation shows that the fields have references to Class objects.
Running the test with a 8u60 shows no warnings.
Adding a call to it gives lots of warnings:
hprof> WARNING: Failed to resolve object id 0x6c003d348 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f270 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001ff08 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f410 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001ffd8 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f9c0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fa28 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f0d0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0022218 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0020110 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f1a0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fd68 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f4e0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c00200a8 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f8f0 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f958 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f3a8 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fea0 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f2d8 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001ff70 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f208 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f6e8 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f750 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f618 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f680 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f7b8 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f820 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f340 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fe38 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001f478 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0020040 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c001fa90 for field value (signature L)
hprof> WARNING: Failed to resolve object id 0x6c00201e0 for field key (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0112980 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c00175d0 for field m_matchingInterface (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0103c10 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c003c268 for field rtype (signature L)
hprof> WARNING: Failed to resolve object id 0x6c002b018 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c010e4d0 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c003c268 for field returnType (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0035bb8 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0035b50 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c003bd00 for field returnType (signature L)
hprof> WARNING: Failed to resolve object id 0x6c00533f8 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0053318 for field type (signature L)
hprof> WARNING: Failed to resolve object id 0x6c0053680 for field type (signature L)
A first investigation shows that the fields have references to Class objects.
Running the test with a 8u60 shows no warnings.
- backported by
-
JDK-8219435 test/serviceability/dcmd/gc/HeapDumpTest fails to verify the dump
-
- Resolved
-
-
JDK-8223526 test/serviceability/dcmd/gc/HeapDumpTest fails to verify the dump
-
- Resolved
-
-
JDK-8224287 test/serviceability/dcmd/gc/HeapDumpTest fails to verify the dump
-
- Resolved
-
-
JDK-8221665 test/serviceability/dcmd/gc/HeapDumpTest fails to verify the dump
-
- Closed
-
- relates to
-
JDK-8133317 Integer overflow in heapDumper.cpp leads to corrupt HPROF dumps
-
- Closed
-