8134030: test/serviceability/dcmd/gc/HeapDumpTest fails to verify the dump Reviewed-by: dholmes